@@ -1,6 +1,11 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Enhancements]
+  - Add support for write-once attributes.
+
+  [Documentation]
+  - Updated ABSTRACT and POD accordingly.
 
 v0.1.4    2018-11-10 12:27:54+00:00 Europe/London
   [Documentation]
